--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "shards",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "dev": "cd example && vite",
-    "preview": "cd example && vite build && vite preview",
     "fix": "biome check --fix --unsafe",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Tomasz Kordiak",
   "license": "MIT",
-  "description": "",
+  "description": "Simple react router.",
   "dependencies": {
     "react": "19.1.1",
     "react-dom": "19.1.1"
@@ -21,9 +18,5 @@
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "typescript": "5.9.2"
-  },
-  "peerDependencies": {
-    "vite": "7.1.3",
-    "@vitejs/plugin-react": "5.0.1"
   }
 }
