--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "1.0.0",
   "scripts": {
     "fix": "biome check --fix --unsafe",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run"
   },
   "author": "Tomasz Kordiak",
   "license": "MIT",
   "description": "Simple react router.",
   "dependencies": {
-    "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react": "^19"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
     "@types/node": "24.3.0",
-    "@types/react": "19.1.10",
-    "@types/react-dom": "19.1.7",
-    "typescript": "5.9.2"
+    "@types/react": "^19",
+    "@vitest/browser": "^3.2.4",
+    "jsdom": "27.0.0",
+    "playwright": "^1.56.0",
+    "typescript": "5.9.2",
+    "vitest": "^3.2.4",
+    "vitest-browser-react": "1.0.1",
+    "webdriverio": "^9.20.0"
   }
 }
