--- a/package.json
+++ b/package.json
@@ -15,12 +15,6 @@
     "@biomejs/biome": "2.2.2",
     "@types/node": "24.3.0",
     "@types/react": "^19",
-    "@vitest/browser": "^3.2.4",
-    "jsdom": "27.0.0",
-    "playwright": "^1.56.0",
-    "typescript": "5.9.2",
-    "vitest": "^3.2.4",
-    "vitest-browser-react": "1.0.1",
-    "webdriverio": "^9.20.0"
+    "typescript": "5.9.2"
   }
 }
